test/libsolidity/syntaxTests/nameAndTypeResolution/226_inheriting_library.sol
contract Test {}
library Lib is Test {}
// ----
// TypeError 9469: (17-39='library Lib is Test {}'): Library is not allowed to inherit.
